# txai_omics_3

./: README.md  pyproject.toml  requirements.txt  run_adversarial.py  run_atk_def_od.py  run_inference.py  run_trn_val_tst.py
.github/workflows/: code-quality-pr.yaml
configs/: adversarial.yaml  atk_def_od.yaml  inference.yaml  trn_val_tst.yaml
configs/callbacks/: default.yaml
configs/datamodule/dnam/classification/: parkinson.yaml
configs/datamodule/immuno/regression/: age.yaml
configs/experiment/dnam/classification/: parkinson_adversarial.yaml  parkinson_atk_def_od.yaml  parkinson_trn_val_tst.yaml
configs/experiment/immuno/regression/: age_adversarial.yaml  age_atk_def_od.yaml  age_inference.yaml  age_trn_val_tst.yaml
configs/hparams_search/dnam/classification/parkinson/: widedeep_ft_transformer.yaml  widedeep_tab_mlp.yaml  widedeep_tab_net.yaml
configs/hparams_search/immuno/regression/age/: danet.yaml  pytorch_tabular_autoint.yaml  pytorch_tabular_node.yaml  widedeep_ft_transformer.yaml  widedeep_saint.yaml  widedeep_tab_mlp.yaml  (+1 more)
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/trainer/: cpu.yaml  gpu.yaml
data/dnam/: model.ckpt
data/immuno/: data.xlsx  shap.pickle
legacy/: report_3_description.md
scripts/: simage_inference.ipynb
src/: simage.py
src/datamodules/: cross_validation.py  tabular.py
src/models/tabular/: base.py
src/models/tabular/arm_net/: models.py
src/models/tabular/stg/: stg.py
src/models/tabular/widedeep/: ft_transformer.py
src/tasks/: metrics.py  routines.py
src/tasks/classification/: adversarial.py  atk_def_od.py  inference.py  shap.py  trn_val_tst.py
src/tasks/regression/: adversarial.py  atk_def_od.py  shap.py  trn_val_tst.py
src/utils/: attacks.py  augmentation.py
src/utils/outliers/: iqr.py  pyod.py
tests/: test_functions.py
txai_omics_3/callbacks/: wandb_callbacks.py
txai_omics_3/datamodules/: cross_validation.py  tabular.py
txai_omics_3/models/tabular/: base.py
txai_omics_3/models/tabular/arm_net/: models.py
txai_omics_3/models/tabular/danet/: danet.py
txai_omics_3/models/tabular/nam/: nam.py
txai_omics_3/models/tabular/nbm_spam/: nam.py  nbm.py  spam.py
txai_omics_3/models/tabular/pytorch_tabular/: autoint.py  base.py  category_embedding.py  ft_transformer.py  node.py  tab_transformer.py  tabnet.py
txai_omics_3/models/tabular/stg/: stg.py
txai_omics_3/models/tabular/widedeep/: base.py  ft_transformer.py  saint.py  tab_fastformer.py  tab_mlp.py  tab_net.py  tab_perceiver.py  tab_resnet.py  tab_transformer.py
txai_omics_3/tasks/: routines.py
txai_omics_3/tasks/classification/: adversarial.py  atk_def_od.py  shap.py  trn_val_tst.py
txai_omics_3/tasks/regression/: adversarial.py  atk_def_od.py  shap.py  trn_val_tst.py
txai_omics_3/utils/: utils.py
txai_omics_3/utils/outliers/: iqr.py  pyod.py
(+45 files in other folders)
