[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "txai_omics_3"
version = "0.1.12"
description = "A library with several BioAge prediction models."
readme = "README.md"
authors = [
  "Igor Yusipov <yusipov.igor@itmm.unn.ru>"
]
maintainers = [
    "Igor Yusipov <yusipov.igor@itmm.unn.ru>",
    "Sergei Tikhomirov <stikhomirov@itmm.unn.ru>"
]
repository = "https://github.com/SermanVS/txai_omics_3"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "1.26.4"
pytorch-tabular = "1.1.0"
pytorch-widedeep = "1.1.1"
pytorch_lightning = "*"
pandas = "*"
shap = "*"
wandb = "*"
torchmetrics = "*"
scikit-learn = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
