[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "txai_omics_3"
version = "0.1.12"
description = "A library with several BioAge prediction models."
readme = "README.md"
authors = [
  "Igor Yusipov <yusipov.igor@itmm.unn.ru>"
]
maintainers = [
    "Igor Yusipov <yusipov.igor@itmm.unn.ru>",
    "Sergei Tikhomirov <stikhomirov@itmm.unn.ru>"
]
repository = "https://github.com/SermanVS/txai_omics_3"

[tool.poetry.dependencies]
python = "3.11"
numpy = "1.26.4"
torch = [
  {version = "2.3.1+cpu", markers = "sys_platform == 'linux'"},
  {version = "2.3.1+cpu", markers = "sys_platform == 'win32'"}
]
torchvision = "0.18.1+cpu"
pytorch-tabular = "1.1.0"
pytorch-widedeep = "1.1.1"
pytorch_lightning = "2.1.4"
pandas = "2.2.3"
shap = "0.46.0"
wandb = "0.18.7"
torchmetrics = "1.2.1"
scikit-learn = "1.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
