[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "txai_omics_3"
version = "0.1.13"
description = "A library with several BioAge prediction models."
readme = "README.md"
authors = [
  "Igor Yusipov <yusipov.igor@itmm.unn.ru>"
]
maintainers = [
    "Igor Yusipov <yusipov.igor@itmm.unn.ru>",
    "Sergei Tikhomirov <stikhomirov@itmm.unn.ru>"
]
repository = "https://github.com/SermanVS/txai_omics_3"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "1.26.4"
torch = {version = "2.3.1+cpu", source = "torch"}
torchvision = {version = "0.18.1+cpu", source = "torch"}
torchaudio = {version = "2.3.1+cpu", source = "torch"}
pytorch-tabular = "1.1.0"
pytorch-widedeep = "1.1.1"
pytorch_lightning = "2.1.4"
pandas = "2.2.3"
shap = "0.46.0"
wandb = "0.18.7"
torchmetrics = "1.2.1"
scikit-learn = "1.5.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
